# libav_MJPEG-transcode-VP9_C_Universe

./: .gitignore  .gitmodules  README.md
FFMpeg_themself/: build_FFMpeg.sh
audioExample/src/: CMakeLists.txt  filter_audio.c
filterExample/src/: CMakeLists.txt  transcode.c
filterExample2014/src/: CMakeLists.txt  transcode.c
myExample/: input.yuvj422p
myExample/src/: 3_transcoding.c  CMakeLists.txt  transcode (without filters not works).c  transcode.c  video_debugging.c
